bugfix: blog post text spacing bugfix

--- a/src/assets/styles/components.less
+++ b/src/assets/styles/components.less
@@ -27,12 +27,14 @@
     text-align: center;
     color: @primary-invert;
     z-index: 2;
+    letter-spacing: .1rem;
 
     h2 {
       font-size: 1.5rem;
+
     }
     h1 {
-      font-size: 2rem;
+      .size-2();
       color: @primary-invert;
       margin-top: 10px;
       font-family: 'Open Sans, Arial, sans-serif';
@@ -116,12 +118,16 @@
   section {
     padding: 0.6rem 0.8rem;
   }
+
   p {
-    font-size: 0.85rem;
-    .light-text();
+    font-size: 0.9rem;
+    .gray-text();
   }
+
   h3 {
     font-weight: 700;
+    margin-bottom: 0.3rem;
+    font-size: 1.1rem;
   }
   .button {
     background: transparent;
