--- a/src/assets/styles/typography.less
+++ b/src/assets/styles/typography.less
@@ -1,3 +1,6 @@
+h1, h2, h3, h4 {
+  font-weight: normal;
+} 
 .title {
   font-size: 3rem;
 }
@@ -5,6 +8,9 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 1.8;
+  color: #777;
+}
+.gray-text {
   color: #777;
 }
 .size-1 {
